--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -9,13 +9,23 @@ RUN add-apt-repository ppa:couchdb/stable && \
   && apt-get install -y --no-install-recommends \
   couchdb rebar
 
-RUN chown -R couchdb:couchdb \
+RUN mkdir -p /usr/local/lib/couchdb/plugins \
+    chown -R couchdb:couchdb \
     /usr/local/lib/couchdb /usr/local/etc/couchdb \
     /usr/local/var/lib/couchdb /usr/local/var/log/couchdb /usr/local/var/run/couchdb \
   && chmod -R g+rw \
     /usr/local/lib/couchdb /usr/local/etc/couchdb \
     /usr/local/var/lib/couchdb /usr/local/var/log/couchdb /usr/local/var/run/couchdb \
   && mkdir -p /var/lib/couchdb
+
+# install plugins
+RUN git clone https://github.com/etrepum/couchperuser.git /usr/local/lib/couchdb/plugins \
+    cd /usr/local/lib/couchdb/plugins \
+    make \
+    service couchdb restart
+
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Expose to the outside
 RUN sed -e 's/^bind_address = .*$/bind_address = 0.0.0.0/' -i /usr/local/etc/couchdb/default.ini
