--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -7,22 +7,15 @@ RUN groupadd -r couchdb && useradd -d /var/lib/couchdb -g couchdb couchdb
 RUN add-apt-repository ppa:couchdb/stable && \
     apt-get update -y \
   && apt-get install -y --no-install-recommends \
-  couchdb rebar
-
-RUN mkdir -p /usr/local/lib/couchdb/plugins && \
-    chown -R couchdb:couchdb \
-    /usr/local/lib/couchdb /usr/local/etc/couchdb \
-    /usr/local/var/lib/couchdb /usr/local/var/log/couchdb /usr/local/var/run/couchdb \
-  && chmod -R g+rw \
-    /usr/local/lib/couchdb /usr/local/etc/couchdb \
-    /usr/local/var/lib/couchdb /usr/local/var/log/couchdb /usr/local/var/run/couchdb \
-  && mkdir -p /var/lib/couchdb
+  couchdb rebar \
+  && stop couchdb
 
 # install plugins
-RUN git clone https://github.com/etrepum/couchperuser.git /usr/local/lib/couchdb/plugins \
-    cd /usr/local/lib/couchdb/plugins \
-    make \
-    service couchdb restart
+RUN mkdir -p /usr/local/lib/couchdb/plugins && \
+    git clone https://github.com/etrepum/couchperuser.git /usr/local/lib/couchdb/plugins &&\
+    cd /usr/local/lib/couchdb/plugins &&\
+    make &&\
+    start couchdb
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
