add clean up script

--- a/couchdb/Dockerfile
+++ b/couchdb/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
 
 RUN apt-get update -y \
   && apt-get install -y --no-install-recommends \
-    build-essential git \
+    build-essential git
 
 # install plugins
 RUN mkdir -p /usr/local/lib/couchdb/plugins && \
@@ -12,5 +12,8 @@ RUN mkdir -p /usr/local/lib/couchdb/plugins && \
     cd /usr/local/lib/couchdb/plugins &&\
     make &&\
     start couchdb
+
+# Clean up APT when done.
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 COPY local.ini /usr/local/etc/couchdb/
