--- a/fluent/config/td-agent.conf
+++ b/fluent/config/td-agent.conf
@@ -4,7 +4,36 @@
   tag  rsyslog
 </source>
 
-<match rsyslog.**>
+<source>
+  type tail
+  path /var/lib/docker/containers/*/*-json.log
+  pos_file /var/log/fluentd-docker.pos
+  time_format %Y-%m-%dT%H:%M:%S
+  tag docker.*
+  format json
+</source>
+
+<match rsyslog>
+  type record_reformer
+  _source rsyslog 
+  tag rsyslog.all
+</match>
+
+<match rsyslog.all>
+  type elasticsearch
+  logstash_format true
+  host 127.0.0.1
+  port 9200
+</match>
+
+<match docker.var.lib.docker.containers.*.*.log>
+  type record_reformer
+  container_id ${tag_parts[5]}
+  _source docker
+  tag docker.all
+</match>
+
+<match docker.all>
   type elasticsearch
   logstash_format true
   host 127.0.0.1
