Changed based image to anduin/java.

--- a/fluent/Dockerfile
+++ b/fluent/Dockerfile
@@ -1,44 +1,14 @@
-FROM ubuntu:14.10
-MAINTAINER Cuong Pham  "cuongpham@anduintransact.com"
+FROM anduin/java
+MAINTAINER Cuong Pham "cuongpham@anduintransact.com"
 
 # avoid interactive dialoges from apt:
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN sed 's/main$/main universe/' -i /etc/apt/sources.list
-
+# install apache webserver
 RUN apt-get update && apt-get install -yq \
     build-essential \
     make \
-    ca-certificates \
-    net-tools \
-    sudo \
-    wget \
-    vim \
-    strace \
-    lsof \
-    netcat \
-    software-properties-common \
-    python-software-properties \
-    python-pip \
-    curl \
-    supervisor \
-    --no-install-recommends
-
-# add repos and update:
-RUN add-apt-repository ppa:webupd8team/java; apt-get update;
-
-# install java8:
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections; apt-get -y install oracle-java8-installer oracle-java8-set-default --no-install-recommends
-
-# set JAVA_HOME
-ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
-
-# secured SecureRandom
-RUN sed -e 's%^\(securerandom.source\)=.*%\1=file:/dev/./urandom%' \
-        -i $JAVA_HOME/jre/lib/security/java.security
-
-# install apache webserver
-RUN apt-get -y install apache2
+    apache2
 
 ENV APACHE_RUN_USER www-data
 ENV APACHE_RUN_GROUP www-data
