Listen to rsyslog on udp.

--- a/fluent/config/td-agent.conf
+++ b/fluent/config/td-agent.conf
@@ -1,6 +1,7 @@
 <source>
   type syslog
   port 42185
+  bind 0.0.0.0
   tag  rsyslog
 </source>
 
@@ -13,13 +14,13 @@
   format json
 </source>
 
-<match rsyslog>
+<match rsyslog.**>
   type record_reformer
   _source rsyslog 
-  tag rsyslog.all
+  tag reformed_rsyslog
 </match>
 
-<match rsyslog.all>
+<match reformed_rsyslog>
   type elasticsearch
   logstash_format true
   host 127.0.0.1
