Split fluent into two containers: 1. fluent, 2. ES + Kibana + apache2

--- a/es_kibana/config/supervisord.conf
+++ b/es_kibana/config/supervisord.conf
@@ -31,6 +31,16 @@ nodaemon=true
 [include]
 files = /etc/supervisor/conf.d/*.conf
 
-[program:fluent]
-command=td-agent --use-v1-config --conf=/etc/td-agent/td-agent.conf
+[program:apache]
+command=/usr/sbin/apache2ctl -D FOREGROUND
+autostart=true
+autorestart=true
 startsecs=5
+priority=11
+
+[program:elasticsearch]
+command=/opt/elasticsearch/bin/elasticsearch -f
+autostart=true
+autorestart=true
+startsecs=5
+priority=10
