--- a/fluent/Dockerfile
+++ b/fluent/Dockerfile
@@ -1,41 +1,13 @@
-FROM anduin/java
+FROM anduin/base
 MAINTAINER Cuong Pham "cuongpham@anduintransact.com"
 
 # avoid interactive dialoges from apt:
 ENV DEBIAN_FRONTEND noninteractive
 
-# install apache webserver
-RUN apt-get update && apt-get install -yq \
-    build-essential \
-    make \
-    apache2
-
-ENV APACHE_RUN_USER www-data
-ENV APACHE_RUN_GROUP www-data
-ENV APACHE_LOG_DIR /var/log/apache2
-ENV APACHE_LOCK_DIR /var/lock/apache2
-ENV APACHE_PID_FILE /var/run/apache2.pid
-
-ADD config/apache-config.conf /etc/apache2/sites-enabled/000-default.conf
-
-# install ElasticSearch
-RUN cd /opt; \
-      curl -O https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.0.RC2.tar.gz; \
-      tar zxvf elasticsearch-0.90.0.RC2.tar.gz; \
-      mv elasticsearch-0.90.0.RC2 elasticsearch; \
-      rm -f elasticsearch-0.90.0.RC2.tar.gz
-
-
-# install Kibana
-RUN cd /tmp; \
-      curl -O https://download.elasticsearch.org/kibana/kibana/kibana-3.0.0milestone5.tar.gz; \
-      tar zxvf kibana-3.0.0milestone5.tar.gz; \
-      mv kibana-3.0.0milestone5 kibana; \
-      mv kibana /var/www/site
-
-ADD config/kibana/config.js /var/www/site/config.js
-
 # install fluent
+RUN apt-get update && \
+    apt-get install -y --force-yes build-essential make
+
 RUN cd /tmp; \
       curl http://packages.treasuredata.com/GPG-KEY-td-agent | apt-key add -; \
       echo "deb [arch=amd64] http://packages.treasuredata.com/2/ubuntu/trusty/ trusty contrib" > /etc/apt/sources.list.d/treasure-data.list; \
@@ -46,10 +18,10 @@ RUN cd /tmp; \
 
 ADD config/td-agent.conf /etc/td-agent/td-agent.conf
 
-# 8080:80       -- apache server
-# 9200:9200     -- ElasticSearch
+# RUN echo 'export ES_ADDR=$ESK_PORT_9200_TCP_ADDR' >> /etc/default/td-agent
+
 # 42185:42185   -- fluent port for rsyslog
-EXPOSE 4001 7001 80 9200 42185/udp
+EXPOSE 42185/udp
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
