--- a/fluent/config/td-agent.conf
+++ b/fluent/config/td-agent.conf
@@ -23,7 +23,7 @@
 <match reformed_rsyslog>
   type elasticsearch
   logstash_format true
-  host 127.0.0.1
+  host "#{ENV['ESK_PORT_9200_TCP_ADDR']}"
   port 9200
 </match>
 
@@ -37,6 +37,6 @@
 <match docker.all>
   type elasticsearch
   logstash_format true
-  host 127.0.0.1
+  host "#{ENV['ESK_PORT_9200_TCP_ADDR']}"
   port 9200
 </match>
