Fixed fluentd config to work with journald.

--- a/fluent/config/td-agent.conf
+++ b/fluent/config/td-agent.conf
@@ -1,9 +1,18 @@
 <source>
-  type syslog
+  type udp
   port 42185
   bind 0.0.0.0
-  tag  rsyslog
+  tag journald
+  format /^(?<time>[^ ]* [^ ]* [^ ]*) (?<host>[^ ]*) (?<ident>[a-zA-Z0-9_\/\.\-]*)(?:\[(?<pid>[0-9]+)\])?[^\:]*\: *(?<message>.*)$/
+  time_format %b %d %H:%M:%S
 </source>
+
+<match journald.**>
+  type elasticsearch
+  logstash_format true
+  host "#{ENV['ESK_PORT_9200_TCP_ADDR']}"
+  port 9200
+</match>
 
 <source>
   type tail
@@ -13,19 +22,6 @@
   tag docker.*
   format json
 </source>
-
-<match rsyslog.**>
-  type record_reformer
-  _source rsyslog 
-  tag reformed_rsyslog
-</match>
-
-<match reformed_rsyslog>
-  type elasticsearch
-  logstash_format true
-  host "#{ENV['ESK_PORT_9200_TCP_ADDR']}"
-  port 9200
-</match>
 
 <match docker.var.lib.docker.containers.*.*.log>
   type record_reformer
