Upgrading to Kibana 4.

--- a/fluent/config/td-agent.conf
+++ b/fluent/config/td-agent.conf
@@ -2,12 +2,18 @@
   type udp
   port 42185
   bind 0.0.0.0
-  tag journald
+  tag raw_journald
   format /^(?<time>[^ ]* [^ ]* [^ ]*) (?<host>[^ ]*) (?<ident>[a-zA-Z0-9_\/\.\-]*)(?:\[(?<pid>[0-9]+)\])?[^\:]*\: *(?<message>.*)$/
   time_format %b %d %H:%M:%S
 </source>
 
-<match journald.**>
+<match raw_journald.**>
+  type record_reformer
+  _source journald
+  tag journald
+</match>
+
+<match journald>
   type elasticsearch
   logstash_format true
   host "#{ENV['ESK_PORT_9200_TCP_ADDR']}"
