--- a/es_kibana/Dockerfile
+++ b/es_kibana/Dockerfile
@@ -5,43 +5,37 @@ MAINTAINER Cuong Pham "cuongpham@anduintransact.com"
 ENV DEBIAN_FRONTEND noninteractive
 
 # install apache webserver
-RUN apt-get update && apt-get install -yq \
-    build-essential \
-    make \
-    apache2
-
-ENV APACHE_RUN_USER www-data
-ENV APACHE_RUN_GROUP www-data
-ENV APACHE_LOG_DIR /var/log/apache2
-ENV APACHE_LOCK_DIR /var/lock/apache2
-ENV APACHE_PID_FILE /var/run/apache2.pid
-
-ADD config/apache-config.conf /etc/apache2/sites-enabled/000-default.conf
+RUN apt-get update
+RUN apt-get install -y supervisor curl wget
 
 # install ElasticSearch
-RUN cd /opt; \
-      curl -O https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.0.RC2.tar.gz; \
-      tar zxvf elasticsearch-0.90.0.RC2.tar.gz; \
-      mv elasticsearch-0.90.0.RC2 elasticsearch; \
-      rm -f elasticsearch-0.90.0.RC2.tar.gz
+RUN \
+    curl -s http://packages.elasticsearch.org/GPG-KEY-elasticsearch | apt-key add - && \
+    if ! grep "elasticsearch" /etc/apt/sources.list; then echo "deb http://packages.elasticsearch.org/elasticsearch/1.4/debian stable main" >> /etc/apt/sources.list;fi && \
+    apt-get update
+
+RUN \
+    apt-get install -y elasticsearch && \
+    apt-get clean && \
+    sed -i '/#cluster.name:.*/a cluster.name: logstash' /etc/elasticsearch/elasticsearch.yml && \
+    sed -i '/#path.data: \/path\/to\/data/a path.data: /opt/elasticsearch/data' /etc/elasticsearch/elasticsearch.yml
+
+ADD config/etc/supervisor/conf.d/elasticsearch.conf /etc/supervisor/conf.d/elasticsearch.conf
 
 # install Kibana
-RUN cd /tmp; \
-      curl -O https://download.elasticsearch.org/kibana/kibana/kibana-3.0.0milestone5.tar.gz; \
-      tar zxvf kibana-3.0.0milestone5.tar.gz; \
-      mv kibana-3.0.0milestone5 kibana; \
-      mv kibana /var/www/site
+RUN \
+    curl -s https://download.elasticsearch.org/kibana/kibana/kibana-4.0.0-linux-x64.tar.gz | tar -C /opt -xz && \
+    ln -s /opt/kibana-4.0.0-linux-x64 /opt/kibana && \
+    sed -i 's/port: 5601/port: 80/' /opt/kibana/config/kibana.yml
 
+ADD config/etc/supervisor/conf.d/kibana.conf /etc/supervisor/conf.d/kibana.conf
+# ADD config/kibana/default.json /var/www/site/app/dashboards/default.json
 
-# 8080:80       -- apache server
+# 8080:80       -- Kibana
 # 9200:9200     -- ElasticSearch - Link to fluentd
 EXPOSE 80 9200
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-ADD config/supervisord.conf /etc/supervisor/supervisord.conf
-ADD config/kibana/config.js /var/www/site/config.js
-ADD config/kibana/default.json /var/www/site/app/dashboards/default.json
-
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD [ "/usr/bin/supervisord", "-n", "-c", "/etc/supervisor/supervisord.conf" ]
