Changed path of the elasticsearch.

--- a/es_kibana/Dockerfile
+++ b/es_kibana/Dockerfile
@@ -18,7 +18,7 @@ RUN \
     apt-get install -y elasticsearch && \
     apt-get clean && \
     sed -i '/#cluster.name:.*/a cluster.name: logstash' /etc/elasticsearch/elasticsearch.yml && \
-    sed -i '/#path.data: \/path\/to\/data/a path.data: /opt/elasticsearch/data' /etc/elasticsearch/elasticsearch.yml
+    sed -i '/#path.data: \/path\/to\/data/a path.data: /mnt/elasticsearch/data' /etc/elasticsearch/elasticsearch.yml
 
 ADD config/etc/supervisor/conf.d/elasticsearch.conf /etc/supervisor/conf.d/elasticsearch.conf
 
