--- a/grafana-influxdb/build
+++ b/grafana-influxdb/build
@@ -1,5 +1,5 @@
 #! /bin/bash
 
-docker rm grafana-influxdb_con
+docker rm grafana-influxdb
 docker rmi -f grafana_influxdb
 docker build -t grafana_influxdb .
