--- a/grafana-influxdb/supervisord.conf
+++ b/grafana-influxdb/supervisord.conf
@@ -6,10 +6,16 @@ command = /usr/sbin/nginx
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+priority = 10
 
 [program:influxdb]
 command = /usr/local/bin/run_influxdb
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+priority = 11
 
+[program:config_influxdb]
+command = /configure.sh
+autorestart = false
+priority = 12
