--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,22 +1,16 @@
-FROM phusion/baseimage:0.9.16
+# Based on https://github.com/frol/docker-alpine-oraclejdk8
+FROM alpine:3.2
 MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
 
-# avoid interactive dialoges from apt:
-ENV DEBIAN_FRONTEND noninteractive
-
-RUN groupadd -r anduin && useradd -g anduin anduin
-
-# install essential tools
-RUN apt-get update && apt-get install -yq \
-    ca-certificates \
-    software-properties-common \
-    python-software-properties \
-    python-pip \
-    curl \
-    supervisor \
-    git \
-    libfontconfig \
-    --no-install-recommends
-
-# Clean up APT when done.
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+# Here we use several hacks collected from https://github.com/gliderlabs/docker-alpine/issues/11:
+# 1. install GLibc (which is not the cleanest solution at all)
+# 2. hotfix /etc/nsswitch.conf, which is apperently required by glibc and is not used in Alpine Linux
+RUN apk add --update wget ca-certificates && \
+    cd /tmp && \
+    wget "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-2.21-r2.apk" \
+         "https://circle-artifacts.com/gh/andyshinn/alpine-pkg-glibc/6/artifacts/0/home/ubuntu/alpine-pkg-glibc/packages/x86_64/glibc-bin-2.21-r2.apk" && \
+    apk add --allow-untrusted glibc-2.21-r2.apk glibc-bin-2.21-r2.apk && \
+    /usr/glibc/usr/bin/ldconfig /lib /usr/glibc/usr/lib && \
+    echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
+    addgroup anduin && adduser -G anduin -D anduin && \
+    rm /tmp/* /var/cache/apk/*
