--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -1,21 +1,53 @@
-FROM anduin/base:0.4.0
+# Based on https://github.com/frol/docker-alpine-oraclejdk8
+FROM anduin/base:0.5.0
 MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
 
-# avoid interactive dialoges from apt:
-ENV DEBIAN_FRONTEND noninteractive
+ENV JAVA_VERSION=8 \
+    JAVA_UPDATE=45 \
+    JAVA_BUILD=14 \
+    JAVA_HOME=/usr/lib/jvm/default-jvm
 
-# add repos and update:
-RUN add-apt-repository ppa:webupd8team/java; apt-get update;
-
-# install java 8
-RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections; apt-get -y install oracle-java8-installer oracle-java8-set-default maven --no-install-recommends
-
-# set JAVA_HOME
-ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
-
-# secured SecureRandom
-RUN sed -e 's%^\(securerandom.source\)=.*%\1=file:/dev/./urandom%' \
-        -i $JAVA_HOME/jre/lib/security/java.security
-
-# Clean up APT when done.
-RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN cd /tmp && \
+    wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
+        "http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION}u${JAVA_UPDATE}-b${JAVA_BUILD}/jdk-${JAVA_VERSION}u${JAVA_UPDATE}-linux-x64.tar.gz" && \
+    tar xzf "jdk-${JAVA_VERSION}u${JAVA_UPDATE}-linux-x64.tar.gz" && \
+    mkdir -p /usr/lib/jvm && \
+    mv "/tmp/jdk1.${JAVA_VERSION}.0_${JAVA_UPDATE}" "/usr/lib/jvm/java-${JAVA_VERSION}-oracle" && \
+    ln -s "java-${JAVA_VERSION}-oracle" $JAVA_HOME && \
+    ln -s $JAVA_HOME/bin/java /usr/bin/java && \
+    ln -s $JAVA_HOME/bin/javac /usr/bin/javac && \
+    rm -rf $JAVA_HOME/*src.zip && \
+    rm -rf $JAVA_HOME/lib/missioncontrol \
+           $JAVA_HOME/lib/visualvm \
+           $JAVA_HOME/lib/*javafx* \
+           $JAVA_HOME/jre/lib/plugin.jar \
+           $JAVA_HOME/jre/lib/ext/jfxrt.jar \
+           $JAVA_HOME/jre/bin/javaws \
+           $JAVA_HOME/jre/lib/javaws.jar \
+           $JAVA_HOME/jre/lib/desktop \
+           $JAVA_HOME/jre/plugin \
+           $JAVA_HOME/jre/lib/deploy* \
+           $JAVA_HOME/jre/lib/*javafx* \
+           $JAVA_HOME/jre/lib/*jfx* \
+           $JAVA_HOME/jre/lib/amd64/libdecora_sse.so \
+           $JAVA_HOME/jre/lib/amd64/libprism_*.so \
+           $JAVA_HOME/jre/lib/amd64/libfxplugins.so \
+           $JAVA_HOME/jre/lib/amd64/libglass.so \
+           $JAVA_HOME/jre/lib/amd64/libgstreamer-lite.so \
+           $JAVA_HOME/jre/lib/amd64/libjavafx*.so \
+           $JAVA_HOME/jre/lib/amd64/libjfx*.so && \
+    rm -rf $JAVA_HOME/jre/bin/jjs \
+           $JAVA_HOME/jre/bin/keytool \
+           $JAVA_HOME/jre/bin/orbd \
+           $JAVA_HOME/jre/bin/pack200 \
+           $JAVA_HOME/jre/bin/policytool \
+           $JAVA_HOME/jre/bin/rmid \
+           $JAVA_HOME/jre/bin/rmiregistry \
+           $JAVA_HOME/jre/bin/servertool \
+           $JAVA_HOME/jre/bin/tnameserv \
+           $JAVA_HOME/jre/bin/unpack200 \
+           $JAVA_HOME/jre/lib/ext/nashorn.jar \
+           $JAVA_HOME/jre/lib/jfr.jar \
+           $JAVA_HOME/jre/lib/jfr \
+           $JAVA_HOME/jre/lib/oblique-fonts && \
+    rm /tmp/*
