--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -2,52 +2,31 @@
 FROM anduin/base:0.5.0
 MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
 
-ENV JAVA_VERSION=8 \
-    JAVA_UPDATE=45 \
-    JAVA_BUILD=14 \
-    JAVA_HOME=/usr/lib/jvm/default-jvm
+ENV JAVA_VERSION_MAJOR=8 \
+    JAVA_VERSION_MINOR=45 \
+    JAVA_VERSION_BUILD=14 \
+    JAVA_PACKAGE=server-jre
 
 RUN cd /tmp && \
-    wget --header "Cookie: oraclelicense=accept-securebackup-cookie;" \
-        "http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION}u${JAVA_UPDATE}-b${JAVA_BUILD}/jdk-${JAVA_VERSION}u${JAVA_UPDATE}-linux-x64.tar.gz" && \
-    tar xzf "jdk-${JAVA_VERSION}u${JAVA_UPDATE}-linux-x64.tar.gz" && \
-    mkdir -p /usr/lib/jvm && \
-    mv "/tmp/jdk1.${JAVA_VERSION}.0_${JAVA_UPDATE}" "/usr/lib/jvm/java-${JAVA_VERSION}-oracle" && \
-    ln -s "java-${JAVA_VERSION}-oracle" $JAVA_HOME && \
-    ln -s $JAVA_HOME/bin/java /usr/bin/java && \
-    ln -s $JAVA_HOME/bin/javac /usr/bin/javac && \
-    rm -rf $JAVA_HOME/*src.zip && \
-    rm -rf $JAVA_HOME/lib/missioncontrol \
-           $JAVA_HOME/lib/visualvm \
-           $JAVA_HOME/lib/*javafx* \
-           $JAVA_HOME/jre/lib/plugin.jar \
-           $JAVA_HOME/jre/lib/ext/jfxrt.jar \
-           $JAVA_HOME/jre/bin/javaws \
-           $JAVA_HOME/jre/lib/javaws.jar \
-           $JAVA_HOME/jre/lib/desktop \
-           $JAVA_HOME/jre/plugin \
-           $JAVA_HOME/jre/lib/deploy* \
-           $JAVA_HOME/jre/lib/*javafx* \
-           $JAVA_HOME/jre/lib/*jfx* \
-           $JAVA_HOME/jre/lib/amd64/libdecora_sse.so \
-           $JAVA_HOME/jre/lib/amd64/libprism_*.so \
-           $JAVA_HOME/jre/lib/amd64/libfxplugins.so \
-           $JAVA_HOME/jre/lib/amd64/libglass.so \
-           $JAVA_HOME/jre/lib/amd64/libgstreamer-lite.so \
-           $JAVA_HOME/jre/lib/amd64/libjavafx*.so \
-           $JAVA_HOME/jre/lib/amd64/libjfx*.so && \
-    rm -rf $JAVA_HOME/jre/bin/jjs \
-           $JAVA_HOME/jre/bin/keytool \
-           $JAVA_HOME/jre/bin/orbd \
-           $JAVA_HOME/jre/bin/pack200 \
-           $JAVA_HOME/jre/bin/policytool \
-           $JAVA_HOME/jre/bin/rmid \
-           $JAVA_HOME/jre/bin/rmiregistry \
-           $JAVA_HOME/jre/bin/servertool \
-           $JAVA_HOME/jre/bin/tnameserv \
-           $JAVA_HOME/jre/bin/unpack200 \
-           $JAVA_HOME/jre/lib/ext/nashorn.jar \
-           $JAVA_HOME/jre/lib/jfr.jar \
-           $JAVA_HOME/jre/lib/jfr \
-           $JAVA_HOME/jre/lib/oblique-fonts && \
-    rm /tmp/*
+    curl -jksSLH "Cookie: oraclelicense=accept-securebackup-cookie" \
+    http://download.oracle.com/otn-pub/java/jdk/${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-b${JAVA_VERSION_BUILD}/${JAVA_PACKAGE}-${JAVA_VERSION_MAJOR}u${JAVA_VERSION_MINOR}-linux-x64.tar.gz | gunzip -c - | tar -xf - && \
+    mv jdk1.${JAVA_VERSION_MAJOR}.0_${JAVA_VERSION_MINOR}/jre /jre && \
+    rm /jre/bin/jjs && \
+    rm /jre/bin/keytool && \
+    rm /jre/bin/orbd && \
+    rm /jre/bin/pack200 && \
+    rm /jre/bin/policytool && \
+    rm /jre/bin/rmid && \
+    rm /jre/bin/rmiregistry && \
+    rm /jre/bin/servertool && \
+    rm /jre/bin/tnameserv && \
+    rm /jre/bin/unpack200 && \
+    rm /jre/lib/ext/nashorn.jar && \
+    rm /jre/lib/jfr.jar && \
+    rm -rf /jre/lib/jfr && \
+    rm -rf /jre/lib/oblique-fonts && \
+    rm -rf /tmp/*
+
+ENV JAVA_HOME=/jre \
+    PATH=${PATH}:${JAVA_HOME}/bin \
+    LANG=C.UTF-8
