--- a/couchdb/config/couchdb/local.ini
+++ b/couchdb/config/couchdb/local.ini
@@ -20,7 +20,7 @@ max_connections = 8192
 ; Options for the MochiWeb HTTP server.
 ;server_options = [{backlog, 128}, {acceptor_pool_size, 16}]
 ; For more socket options, consult Erlang's module 'inet' man page.
-;socket_options = [{recbuf, 262144}, {sndbuf, 262144}, {nodelay, true}]
+socket_options = [{recbuf, 262144}, {sndbuf, 262144}, {nodelay, true}]
 
 ; Uncomment next line to trigger basic-auth popup on unauthorized requests.
 ;WWW-Authenticate = Basic realm="administrator"
@@ -41,9 +41,11 @@ origins = *
 methods = GET, PUT, POST, HEAD, DELETE, OPTIONS
 headers = accept, authorization, content-type, origin, referer
 
+[couch_httpd_oauth]
+use_users_db = true
+
 [query_servers]
 ;nodejs = /usr/local/bin/couchjs-node /path/to/couchdb/share/server/main.js
-
 
 [httpd_global_handlers]
 ;_google = {couch_httpd_proxy, handle_proxy_req, <<"http://www.google.com">>}
