--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -32,6 +32,7 @@ http {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_set_header Cookie $http_stargazer_auth;
+        proxy_hide_header Set-Cookie;
         proxy_redirect   off;
 
         limit_except GET OPTIONS HEAD {
@@ -44,6 +45,8 @@ http {
         proxy_redirect  off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Cookie $http_stargazer_auth;
+        proxy_hide_header Set-Cookie;
       }
 
       location ~ "^/userdb-([a-z0-9]+)/_changes$" {
@@ -52,6 +55,8 @@ http {
         proxy_redirect  off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Cookie $http_stargazer_auth;
+        proxy_hide_header Set-Cookie;
 
         limit_except GET OPTIONS HEAD {
           deny all;
@@ -64,6 +69,8 @@ http {
         proxy_redirect  off;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Cookie $http_stargazer_auth;
+        proxy_hide_header Set-Cookie;
       }
 
       error_log         /tmp/nginx-error.log;
