good nginx reverse proxy

--- a/couchdb/config/couchdb/local.ini
+++ b/couchdb/config/couchdb/local.ini
@@ -39,7 +39,7 @@ enable_cors = true
 credentials = true
 origins = *
 methods = GET, PUT, POST, HEAD, DELETE, OPTIONS
-headers = accept, authorization, content-type, origin, referer
+headers = accept, authorization, content-type, origin, referer, stargazerauth
 
 [couch_httpd_oauth]
 use_users_db = true
