--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -25,15 +25,17 @@ http {
       gzip          on;
       gzip_buffers  16 8k;
 
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_ssl_session_reuse off;
+      proxy_set_header Host $http_host;
+      proxy_redirect off;
+      proxy_set_header Cookie $http_stargazerauth;
+      proxy_hide_header Set-Cookie;
+
       location / {
         proxy_pass http://127.0.0.1:5984;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_set_header Cookie $http_stargazer_auth;
-        proxy_hide_header Set-Cookie;
-        proxy_redirect   off;
 
         limit_except GET OPTIONS HEAD {
           deny all;
@@ -42,21 +44,11 @@ http {
 
       location ~ "^/userdb-([a-z0-9]+)/_local/([^/]+)$" {
         proxy_pass http://127.0.0.1:5984;
-        proxy_redirect  off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Cookie $http_stargazer_auth;
-        proxy_hide_header Set-Cookie;
       }
 
       location ~ "^/userdb-([a-z0-9]+)/_changes$" {
         proxy_pass http://127.0.0.1:5984;
         proxy_buffering off;
-        proxy_redirect  off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Cookie $http_stargazer_auth;
-        proxy_hide_header Set-Cookie;
 
         limit_except GET OPTIONS HEAD {
           deny all;
@@ -65,12 +57,6 @@ http {
 
       location ~ "^/userdb-([a-z0-9]+)/_all_docs\?include_docs=true$" {
         proxy_pass http://127.0.0.1:5984;
-        proxy_buffering off;
-        proxy_redirect  off;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Cookie $http_stargazer_auth;
-        proxy_hide_header Set-Cookie;
       }
 
       error_log         /tmp/nginx-error.log;
