--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -6,8 +6,7 @@ events {
 }
 
 http {
-  include mime.types;
-  default_type  application/octet-stream;
+  default_type  application/json;
   log_format    main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
@@ -55,7 +54,7 @@ http {
         }
       }
 
-      location ~ "^/userdb-([a-z0-9]+)/_all_docs\?include_docs=true$" {
+      location ~ "^/userdb-([a-z0-9]+)/_all_docs$" {
         proxy_pass http://127.0.0.1:5984;
       }
 
