--- a/anduin-build/Dockerfile
+++ b/anduin-build/Dockerfile
@@ -16,10 +16,15 @@ RUN apt-get update && apt-get install -yq \
     supervisor \
     git \
     libfontconfig \
+    libicu52 \
     --no-install-recommends
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+ADD https://github.com/Pyppe/phantomjs2.0-ubuntu14.04x64/raw/master/bin/phantomjs /usr/bin
+
+RUN chmod +x /usr/bin/phantomjs
 
 # add repos and update:
 RUN add-apt-repository ppa:webupd8team/java; apt-get update
