White list _bulk_get to CORS

--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -58,6 +58,10 @@ http {
         proxy_pass http://127.0.0.1:5984;
       }
 
+      location ~ "^/userdb-([a-z0-9]+)/_bulk_get$" {
+        proxy_pass http://127.0.0.1:5984;
+      }
+
       error_log         /tmp/nginx-error.log;
       access_log        /tmp/nginx-access.log;
   }
