--- a/couchdb/config/couchdb/local.ini
+++ b/couchdb/config/couchdb/local.ini
@@ -24,7 +24,7 @@ socket_options = [{recbuf, 262144}, {sndbuf, 262144}, {nodelay, true}]
 
 ; Uncomment next line to trigger basic-auth popup on unauthorized requests.
 ;WWW-Authenticate = Basic realm="administrator"
-WWW-Authenticate = Other realm="Anduin Transactions, Inc."
+WWW-Authenticate = Basic realm="Anduin Transactions, Inc."
 authentication_handlers = {couch_httpd_oauth, oauth_authentication_handler}, {couch_httpd_auth, cookie_authentication_handler}, {couch_httpd_auth, default_authentication_handler}
 
 ; Uncomment next line to set the configuration modification whitelist. Only
