404 instead of deny

--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -37,7 +37,7 @@ http {
         proxy_pass http://127.0.0.1:5984;
 
         limit_except GET OPTIONS HEAD {
-          deny all;
+          return 404;
         }
       }
 
@@ -50,7 +50,7 @@ http {
         proxy_buffering off;
 
         limit_except GET OPTIONS HEAD {
-          deny all;
+          return 404;
         }
       }
 
