--- a/couchdb/config/nginx/nginx.conf
+++ b/couchdb/config/nginx/nginx.conf
@@ -37,11 +37,15 @@ http {
         proxy_pass http://127.0.0.1:5984;
 
         limit_except GET OPTIONS HEAD {
-          return 404;
+          deny all;
         }
       }
 
       location ~ "^/userdb-([a-z0-9]+)/_local/([^/]+)$" {
+        proxy_pass http://127.0.0.1:5984;
+      }
+
+      location ~ "^/userdb-([a-z0-9]+)/_bulk_docs$" {
         proxy_pass http://127.0.0.1:5984;
       }
 
@@ -50,7 +54,7 @@ http {
         proxy_buffering off;
 
         limit_except GET OPTIONS HEAD {
-          return 404;
+          deny all;
         }
       }
 
