--- a/sync_gateway/supervisord/supervisor.conf
+++ b/sync_gateway/supervisord/supervisor.conf
@@ -2,7 +2,7 @@
 nodaemon = true
 
 [program:sync_gateway]
-command = /usr/local/bin/sync_gateway
+command = /usr/local/bin/sync_gateway /opt/anduin/couchbase/config.json
 priority = 1
 autostart = true
 autorestart = true
