--- a/sync_gateway/supervisord/supervisor.conf
+++ b/sync_gateway/supervisord/supervisor.conf
@@ -1,5 +1,11 @@
 [supervisord]
 nodaemon = true
+pidfile = /run/supervisord.pid
+# It seems that it's not possible to swith this log to NONE (it creates NONE logfile)
+logfile = /opt/supervisord/logs/supervisord.log
+# Set loglevel=debug, only then all logs from child services are printed out
+# to container logs (and thus available via `docker logs [container]`
+loglevel = debug
 
 [program:sync_gateway]
 command = /usr/local/bin/sync_gateway /opt/anduin/couchbase/config.json
