--- a/anduin-phantomjs2/Dockerfile
+++ b/anduin-phantomjs2/Dockerfile
@@ -1,6 +1,8 @@
 FROM phusion/passenger-full:0.9.18
 MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
 
+export DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get update -qq && apt-get upgrade -y && apt-get install -y \
     git \
     build-essential \
