--- a/anduin-build/Dockerfile
+++ b/anduin-build/Dockerfile
@@ -43,7 +43,7 @@ ENV JAVA_HOME /usr/lib/jvm/jdk1.8.0_77
 ENV PATH $PATH:$JAVA_HOME/bin
 
 # Force Docker to use UTF-8 encodings
-ENV LANG C.UTF-8
+ENV LANG en_US.UTF-8
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
