Add logging to couchdb

--- a/couchdb/config/couchdb/local.ini
+++ b/couchdb/config/couchdb/local.ini
@@ -59,6 +59,7 @@ secret = ec1c672b200e43446fd22f31c47e4cc3
 
 [log]
 level = debug
+file = /usr/local/var/log/couchdb/couchdb.log
 
 [log_level_by_module]
 ; In this section you can specify any of the four log levels 'none', 'info',
