--- a/sync_gateway/config/supervisord/supervisord.conf
+++ b/sync_gateway/config/supervisord/supervisord.conf
@@ -8,7 +8,7 @@ logfile = /opt/supervisord/logs/supervisord.log
 loglevel = debug
 
 [program:sync_gateway]
-command = /usr/local/bin/sync_gateway /opt/anduin/couchbase/config.json
+command = /opt/anduin/sync_gateway/run_sync_gateway.sh /opt/anduin/couchbase/config.json
 priority = 1
 autostart = true
 autorestart = true
