--- a/sync_gateway/config/supervisord/supervisord.conf
+++ b/sync_gateway/config/supervisord/supervisord.conf
@@ -12,3 +12,9 @@ command = /opt/anduin/sync_gateway/run_sync_gateway.sh /opt/anduin/couchbase/con
 priority = 1
 autostart = true
 autorestart = true
+
+[program:nginx]
+command = /usr/sbin/nginx
+priority = 2
+autostart = true
+autorestart = true
