--- a/sync_gateway/config/nginx/nginx.conf
+++ b/sync_gateway/config/nginx/nginx.conf
@@ -29,6 +29,7 @@ http {
       proxy_ssl_session_reuse off;
       proxy_set_header Host $http_host;
       proxy_redirect off;
+      proxy_hide_header Access-Control-Allow-Credentials;
       add_header Access-Control-Allow-Credentials false;
 
       location / {
