Finally fix CORS in sync gateway

--- a/sync_gateway/config/nginx/nginx.conf
+++ b/sync_gateway/config/nginx/nginx.conf
@@ -29,8 +29,10 @@ http {
       proxy_ssl_session_reuse off;
       proxy_set_header Host $http_host;
       proxy_redirect off;
-      proxy_hide_header Access-Control-Allow-Credentials;
-      add_header Access-Control-Allow-Credentials false;
+      proxy_set_header Cookie $http_stargazerauth;
+      proxy_hide_header Set-Cookie;
+      add_header Access-Control-Allow-Origin $http_Origin;
+      proxy_hide_header Access-Control-Allow-Origin;
 
       location / {
         proxy_pass http://127.0.0.1:14984;
