Change sync gateway docker to use rpm

--- a/sync_gateway/Dockerfile
+++ b/sync_gateway/Dockerfile
@@ -1,56 +1,22 @@
 FROM centos:centos7
 
-MAINTAINER Binh Nguyen "binhnguyen@anduintransact.com"
+MAINTAINER ductamnguyen@anduintransact.com
 
-ENV GOPATH /opt/go
-ENV SGROOT /opt/anduin/sync_gateway
-ENV GOROOT /usr/local/go
-ENV PATH $PATH:$GOPATH/bin:$GOROOT/bin
+ENV PATH $PATH:/opt/couchbase-sync-gateway/bin
 
-# Get dependencies
+# Install dependencies:
+#  wget: for downloading Sync Gateway package installer
 RUN yum -y update && \
-    yum groupinstall -y development && \
     yum install -y \
-    bc \
-    curl \
-    emacs-nox \
-    git \
-    mercurial \
-    wget \
-    epel-release \
-    iproute \
-    python-setuptools \
-    hostname \
-    inotify-tools \
-    yum-utils which && \
-    yum clean all && \
+    wget python-setuptools epel-release && \
     easy_install supervisor
 
-# Download and install Go
-RUN wget http://golang.org/dl/go1.6.2.linux-amd64.tar.gz && \
-    tar -C /usr/local -xzf go1.6.2.linux-amd64.tar.gz && \
-    rm go1.6.2.linux-amd64.tar.gz
+# Install Sync Gateway
+RUN wget http://packages.couchbase.com/releases/couchbase-sync-gateway/1.3.0/couchbase-sync-gateway-community_1.3.0-274_x86_64.rpm && \
+    rpm -i couchbase-sync-gateway-community_1.3.0-274_x86_64.rpm && \
+    rm couchbase-sync-gateway-community_1.3.0-274_x86_64.rpm
 
-# install common go packages
-RUN go get github.com/tools/godep && \
-    go get github.com/nsf/gocode && \
-    go get golang.org/x/tools/cmd/goimports && \
-    go get github.com/golang/lint/golint && \
-    go get github.com/rogpeppe/godef
-
-# Build Sync Gateway
-RUN mkdir -p $GOPATH && \
-    mkdir -p /opt/anduin && \
-    mkdir -p /opt/supervisord/logs && \
-    cd /opt/anduin && \ 
-    git clone https://github.com/couchbase/sync_gateway.git && \
-    cd $SGROOT && \
-    git checkout 1.3 && \	
-    git submodule update --init --recursive && \
-    ./build.sh && \
-    cp bin/sync_gateway /usr/local/bin && \
-    find . | grep .git | xargs rm -rf && \
-    mkdir -p $SGROOT/data
+RUN mkdir -p /opt/couchbase-sync-gateway/data && mkdir -p /opt/anduin/sync_gateway
 
 ##### nginx
 # Install
@@ -60,15 +26,12 @@ ADD ./config/nginx /etc/nginx
 
 ##### supervisor
 # Configure
-RUN rm -rf /etc/supervisor
+RUN rm -rf /etc/supervisor && mkdir -p /opt/supervisord/logs
 ADD ./config/supervisord /etc/supervisor
-
-RUN groupadd -g 1000 couchbase && useradd couchbase -u 1000 -g couchbase -M
-
-# Expose ports
-EXPOSE 4984 4985
 
 COPY start_sync_gateway.sh /opt/anduin/sync_gateway/
 COPY run_sync_gateway.sh /opt/anduin/sync_gateway/
 
 CMD ["/opt/anduin/sync_gateway/start_sync_gateway.sh"]
+
+EXPOSE 4984 4985
