Fix sync gateway nginx docker for pouchdb

--- a/sync_gateway/config/nginx/nginx.conf
+++ b/sync_gateway/config/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
       proxy_redirect off;
       proxy_set_header Cookie $http_stargazerauth;
       proxy_hide_header Set-Cookie;
-      add_header Access-Control-Allow-Origin $http_Origin;
+      add_header Access-Control-Allow-Origin $http_Origin always;
       proxy_hide_header Access-Control-Allow-Origin;
 
       location / {
